git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,15 @@ migrate_working_dir/
 *.ipr
 *.iws
 .idea/
-
+.linux/
+.web/
+.windows/
+*.metadata
+.macos/
+.analysis_options.yaml
+.ios/
+.test/
+.android/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -31,7 +39,6 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
 # Symbolication related
 app.*.symbols
 
